# footballai

./: .gitignore  README.md  config.py  config.yaml  pyproject.toml  train.py  train_fast.sh
data/: __init__.py  datamodule.py  state_builder.py  statsbomb_dataset.py
footballai/pipeline/: extract.py
models/: __init__.py  lightning_module.py  pretrain_heads.py  spatial_encoder.py  temporal_model.py
pipeline/: .gitignore  config.yaml  pyproject.toml
pipeline/docs/superpowers/plans/: 2026-06-20-soccer-pipeline.md
pipeline/docs/superpowers/specs/: 2026-06-20-soccer-video-analysis-design.md
pipeline/footballai/: config.py  pitch.py  run.py  schema.py
pipeline/footballai/pipeline/: calibrate.py  detect.py  export.py  extract.py  refine.py  teams.py  track.py
pipeline/footballai/stages/: calibrate.py  detect.py  project.py  teams.py
pipeline/tests/: test_calibrate.py  test_config.py  test_detect.py  test_e2e_smoke.py  test_export.py  test_extract.py  test_project.py  test_refine.py  test_run.py  test_schema.py  test_teams.py  test_track.py
runs_smoke/footballai/version_0/: events.out.tfevents.1781974596.TC5090.200498.0
runs_smoke/footballai_csv/version_0/: hparams.yaml  metrics.csv
tests/: test_pitch.py
tests/fixtures/: make_clip.py
utils/: __init__.py  metrics.py
